# endpointsecsdk

./: .gitattributes  .gitignore
.claude/: settings.local.json
HelloWorld/: .gitignore
HelloWorld-CPP/: .gitignore  CMakeLists.txt
HelloWorld-Java/: build-run.ps1  build-run.sh
HelloWorld-Java/license/: putyourlicense.txt
HelloWorld-Java/sample-code-java/: SimpleMain.java
HelloWorld-Mac/: .gitignore  README.md
HelloWorld-Mac/src/SDKDownloader/: CMakeLists.txt  Makefile  SDKDownloader  catalog_files.cpp  catalog_files.hpp  download_manager.cpp  download_manager.h  main.cpp  package_extractor.cpp  package_extractor.h  sdk_downloader.cpp  sdk_downloader.h  xml_parser.cpp  xml_parser.h
OPSWAT-SDK/extract/linux/docs/sample_code/sample-code-cpp/: CMakeLists.txt  README.md
OPSWAT-SDK/extract/linux/docs/sample_code/sample-code-cpp/inc/: args.hxx  wa_utils_singleton.h
OPSWAT-SDK/extract/linux/docs/sample_code/sample-code-cpp/libs/: methodInput.txt
OPSWAT-SDK/extract/linux/docs/sample_code/sample-code-cpp/sample-code-cpp/: OesisAntiphishing.cpp  OesisAntiphishing.h  OesisBackupProduct.h  OesisCloudStorageProduct.cpp  OesisCommand.cpp  OesisDeviceInfo.cpp  OesisEncryptionProduct.h  OesisHealthAgent.cpp  OesisHealthAgent.h  OesisPatchManagement.h  OesisRemoteDesktopControl.cpp  OesisRemoteDesktopControl.h  OesisUnclassified.cpp  OesisUnclassified.h  OesisVirtualMachine.cpp  OesisVirtualMachine.h
go-sample/: .gitignore  Makefile  README.md  build.ps1  build.sh  check-dependencies.ps1  go.mod  setup-sdk-files.ps1  setup-sdk-files.sh
go-sample/src/: main.go
(+611 files in other folders)
